V2.7.1
    * Add validity check of translation for importing an existing dictionary (If reference text is changed while translation is not changed, don't take the translation).

V2.7.0 (Jun. 14, 2013)
	* Add option "Auto create translation languages" for importing dictionaries
	* Update DEFAULT context during importing and receiving translations to DICT context
	* Add context filter in String settings view
	* Update OTC Excel parser and generator to support display check column and other dict information
	* Optimized dictionary import service to avoid parsing dictionary files repeatedly
	* Fixed an importing issue in case conflict translations are found in a single delivery package

V2.6.3 (Jun. 6, 2013)
	* Merge same reference texts of context DEFAULT and DICT into one translation in translation tasks
	* Preview grid of imported dictionaries is now sortable
	* Fixed problem of manually updating translation in text search results

V2.6.2 (Jun. 4, 2013)
	* Fixed problem of truncated filename in generated dictionaries
	* Fixed screen flash issue when switching between applications

V2.6.1 (May. 31, 2013)
	* Rename dict format "OTC PC" to "OTC Excel" and adjust dictioanry parser
	* Bug fix of endless progress bar

V2.6.0 (May. 29, 2013)
	* Add "Fuzzy" option for text search (default is exact match)
	* Add columns "Translation Source" and "Last Updated" in exported excel of translations.
	* Bug fix of incorrect T/N/I number in Label translation view.
	* Bug fix of XMLHelp dict

V2.5.2 (May. 24, 2013)
	* Introduced Apache Lucene as text search engine.
	* Added a "System config" tab in Admin view for re-building Lucene index.
	* Allows to change translation status of selected labels for all languages in "String settings" view.
	* Show progress bar when parsing uploaded dictionary files
	* Block current page when import dictionaries.
	* Change associated language of "GAE" from "English" to "General Alcatel English"