@@ -6,3 +6,4 @@ message.loginfail= Login name or password is incorrect!
 message.name_required = Please specify your name
 message.pwd_required = Password is required
 struts.messages.invalid.token = You have already submitted.
+removeDictLanguage.success=The language code has been removed from {0} dictionaries.
